changed info on abstract and accomodation

--- a/Papers.html
+++ b/Papers.html
@@ -8,7 +8,7 @@
 <!-- Head BEGIN -->
 <head>
   <meta charset="utf-8">
-  <title>ICGTAMH-2022</title>
+  <title>ICGTSTAS-2024</title>
 
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -79,7 +79,7 @@
                 <!-- BEGIN TOP BAR LEFT PART -->
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
-                        <li><i class="fa fa-phone"></i><span>+91-9844158444</span></li>
+                        <li><i class="fa fa-phone"></i><span>+91-8277049441</span></li>
                         <li><i class="fa fa-envelope-o"></i><span>conference.soas@reva.edu.in</span></li>
                     </ul>
                 </div>
@@ -170,7 +170,10 @@
                                </div>
                                <div class="panel-collapse collapse in" id="accordion1_1">
                                   <div class="panel-body">
-                                    <p>Research abstracts, broadly within the scope of the conference thematic areas, written in English language (250 words), are solicited with declaration of originality. Abstracts may be submitted electronically during the registration. Abstracts will be published in the conference compendium. A poster depicting the major research finding presented in the abstract need to be placed in the poster session during the conference.<br> <b>Abstract submission deadline:</b> 15<sup>th</sup> October 2022.<br><b>Confirmation of Selected Abstracts:</b> 20<sup>th</sup> October, 2022.<br><b>Email your abstract to:</b> <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a></p>
+                                    <p>Research abstracts, broadly within the scope of the conference thematic areas, written in English language (250 words), are solicited with the declaration of originality. Abstracts may be submitted electronically during the registration. Abstracts will be published in the conference compendium. The abstract proposal should explain the topic of your presentation, describe the research, practice, and outcomes. Abstract proposals will be evaluated through a blind peer review and selected abstracts will be considered for the conference compendium.<br> 
+                                       <b>Abstract submission deadline:</b> 1<sup>st</sup> October 2024<br>
+                                       <b>Confirmation of Selected Abstracts:</b> 10<sup>th</sup> October, 2024<br>
+                                       <b>Submit your abstract in:</b> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" target="_blank">ICGTSTAS-2024 Application Forms</a></p>
 									<p><em><i class="fa fa-download red"></i></em>
               <a class="carousel-btn-green" href="Abstact_format.docx" data-animation="animated fadeInUp"><span>Abstract format</span></a></p>
                                   </div>
@@ -285,7 +288,15 @@
                                <div class="panel-collapse collapse  in" id="accordion3_1">
                                   <div class="panel-body">
                                      <p>
-                                        Accommodation facility at REVA Hostel on charable basis ia available for participants. Contact Dr. Majji Rambabu (+91-7569888964 for more information. 
+                                       <b>Accommodation will be provided on a chargeable basis is available for participants.</b><br>
+
+                                       <b>For accommodation contact:</b><br>
+                                       <ul>
+                                          <li><b>Physical Sciences <br>Dr. Rajavaram Ramaraghavulu</b><br>+91-9704919432<br><a href="mailto:rajavaram.ramraghavulu@reva.edu.in" target="_blank">rajavaram.ramraghavulu@reva.edu.in</a></li>
+                                          <li><b>Chemical Sciences<br>Dr. Srinivas M</b><br>+91-9900447889<br><a href="mailto:srinivas.m@reva.edu.in" target="_blank">srinivas.m@reva.edu.in</a></li>
+                                          <li><b>Biological Science<br>Dr.Vivek Keshri</b><br>Assistant Professor<br>+91-9755806309<br><a href="mailto:vivek_keshri@reva.edu.in" target="_blank">vivek_keshri@reva.edu.in</a><br></li>
+                                       </ul>
+                                      <b>Note:</b> The organizing committee is not responsible for any financial transactions with the participants. The payment towards your accommodation and travel should be borne by the participants. All expenses re pertaining to the accompanying person should also be borne by the participant.
                                      </p>  
                                   </div>
                                </div>
@@ -309,7 +320,7 @@
         <div class="row"> 
           <!-- BEGIN COPYRIGHT -->
           <div class="col-md-4 col-sm-4 padding-top-10">
-            2022 © REVA University. ALL Rights Reserved.
+            2024 © REVA University. ALL Rights Reserved.
           </div>
           <!-- END COPYRIGHT -->
 		  </div>
