added abstarct format file

--- a/application.html
+++ b/application.html
@@ -153,6 +153,7 @@
 			          For any registration queries and other payment methods or any conference related queries feel free to reach us at <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a><br>
               </p>
               <p>Application form link: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTTRbGXoSDeZvBJ1jOtOa8VEgmFhlSFVqe6JCHJOYARAPkPw/viewform" target="_blank">ICGTSTAS-2024 Application Forms</a></p><br>
+              <p>Abstract format : <a class="carousel-btn-green" href="Abstact_format.docx" data-animation="animated fadeInUp"><span>Abstract format</span></a></p><br>
               <p> Join with WhatsApp Group only for the Conference registered participants <a href="https://chat.whatsapp.com/Ia1pbKoAuapLlyFsoXvt3c" target="_blank">ICGTSTAS-2024 WhatsApp Group</a></p>
           </div>
           <!-- END CONTENT -->
