corrections to date and headers

--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
 <!-- Head BEGIN -->
 <head>
   <meta charset="utf-8">
-  <title>ICGTAMH-2022</title>
+  <title>ICGTSTAS-2024</title>
 
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -54,24 +54,6 @@
 
 <!-- Body BEGIN -->
 <body class="corporate">
-    <!-- BEGIN STYLE CUSTOMIZER -->
-    <div class="color-panel hidden-sm">
-      <div class="color-mode-icons icon-color"></div>
-      <div class="color-mode-icons icon-color-close"></div>
-      <div class="color-mode">
-        <p>REVA University</p>
-        <ul class="inline">
-          <li class="color-red current color-default" data-style="red"></li>
-          <li class="color-blue" data-style="blue"></li>
-          <li class="color-green" data-style="green"></li>
-          <li class="color-orange" data-style="orange"></li>
-          <li class="color-gray" data-style="gray"></li>
-          <li class="color-turquoise" data-style="turquoise"></li>
-        </ul>
-      </div>
-    </div>
-    <!-- END BEGIN STYLE CUSTOMIZER --> 
-
     <!-- BEGIN TOP BAR -->
     <div class="pre-header">
         <div class="container">
@@ -79,7 +61,7 @@
                 <!-- BEGIN TOP BAR LEFT PART -->
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
-                        <li><i class="fa fa-phone"></i><span>+91-9844158444</span></li>
+                        <li><i class="fa fa-phone"></i><span>+91-8277049441</span></li>
                         <li><i class="fa fa-envelope-o"></i><span>conference.soas@reva.edu.in</span></li>
                     </ul>
                 </div>
@@ -200,11 +182,11 @@
      </tr>
      <tr>
        <td>Last Date for registration</td>
-       <td>1<sup>st</sup> October 2022</td>    
+       <td>1<sup>st</sup> October 2024</td>    
      </tr>
      <tr>
        <td>Conference Date</td>
-       <td>24<sup>th</sup> & 25<sup>th</sup>October 2022</td>    
+       <td>24<sup>th</sup> & 25<sup>th</sup>October 2024</td>    
      </tr> 
    </table>
    </div>
