chnages to improve links (removed page linked to html and made registration better)

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <div class="col-md-4 col-sm-4">
             <div class="service-box-heading">
               <em><i class="fa fa-location-arrow blue"></i></em>
-			  <a class="carousel-btn-green" href="program.html" data-animation="animated fadeInUp"><span>Program Schedule</span></a>
+			  <a class="carousel-btn-green" href="#" data-animation="animated fadeInUp"><span>Program Schedule</span></a>
             </div>
             
           </div>
