--- a/registration.html
+++ b/registration.html
@@ -233,17 +233,18 @@ tr:nth-child(even) {
 </table>
 </div>
                </p>
-
-	<div class="col-md-6">	
-	<h3>Group, Co-Authors and Discount</h3>
-	<ul>
-	<li>You are eligible for discounted rate on the registration fee if you are a group of 5 persons and/or more or a co-author of a paper presentation.</li>
-<li>If your group comprises of more than 10 people please contact organizing committee.</li>
-</ul>
-	</div>
-	</div>
-</p>	
-</div>	
+<!--for more points
+              <div class="col-md-12">
+                <hr>
+                <h3 align="center">Group, Co-Authors and Discount</h3>
+                <ul>
+                <li>You are eligible for discounted rate on the registration fee if you are a group of 5 persons and/or more or a co-author of a paper presentation.</li>
+                <li>If your group comprises of more than 10 people please contact our organizing committee for higher percentage on the discount rate.</li>
+                </ul>
+                </div>
+                </p>
+</div>-->
+              
 
           </div>
           <!-- END CONTENT -->
