Changed registration details

--- a/registration.html
+++ b/registration.html
@@ -133,15 +133,16 @@
             <div class="content-page">              
               <h3 align="center">Guidelines to select Registration Fee</h3>
 			  <p>
-			  <li>Conference is conducted through online and offline mode.</li>
-			  <li> Online link will be shared to the registered participants during the day of conference. </li>
-			  <li>If you are Oral Presenter or as a Poster presenter you should register as a delegate/student.</li>
-			  <li>If you are a listener you should register as an attendee.</li>
-			  <li>The registration fee is based on your citizenship, not nationality.</li>
-			  <li>Please go through the following table before you register. We have structured a comprehensive price table for providing you with the best returns from the conference.</li>
-			 <li>If you are unsure about the category you belong to please contact our organizing committee for more details.</li>
-			 <li> E-certificate will be provided to the online participants</li>
-<li> Participants Interested for Oral and Poster Presentations can come for offline mode only (No Online option) </li></p>
+			  <li>The conference is conducted online and offline mode</li>
+			  <li>An online link will be shared with the registered participants on the day of the conference</li>
+			  <li>If you are an oral presenter or a poster presenter, you should register as a delegate/student</li>
+			  <li>If you are only a participant, you should register as an attendee</li>
+			  <li>The registration fee is based on your citizenship, not nationality</li>
+			  <li>Please go through the following table before you register. We have structured a comprehensive price table for provide you with the best returns from the conference</li>
+			  <li>If you are unsure about the category you belong to please contact our organizing committee for more details<a href="contact.html">(Contact Us)</a></li>
+			  <li>E-Certificate will be provided to the online participants</li>
+        <li>Participants interested in online presentations will be provided with the link</li>
+        <li>The registration kit, food, high tea and certificate will be provided for all the registered participants</li></p>
 </div>
 			 	<hr>	
 					 
