--- a/application.html
+++ b/application.html
@@ -23,7 +23,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="-CUSTOMER VALUE-"><!-- link to image for socio -->
   <meta property="og:url" content="-CUSTOMER VALUE-">
-
+  <link rel = "icon" href = "icon.png" type = "image/x-icon">
   <link rel="shortcut icon" href="https://reva.edu.in">
 
   <!-- Fonts START -->
