chnaged the contacts (added all)

--- a/contact.html
+++ b/contact.html
@@ -140,17 +140,23 @@
                 <div class="col-md-3">
                   <h4>For further details, please contact</h4>
                   <address>
-                    <strong>Dr. Ganesh Shridhar Hegd</strong><br>
-					Organising secretary<br>
-                    Assistant Professor<br>
-                    Department of Physics<br>
-					School of Applied Sciences<br>
-                    <abbr title="Phone">Phone:</abbr> +91 8277049441
-                  </address>
-                  <address>
-                    <strong>Email</strong><br>
-                    <a href="mailto:conference.soas@reva.edu.in">conference.soas@reva.edu.in</a><br>
-                    <a href="mailto:ganesh.hegde@reva.edu.in">ganesh.hegde@reva.edu.in</a>
+                    <ul>
+                    <li><b>Physical Sciences</b><br>
+                      <strong>Dr. Ganesh Shridhar Hegd</strong><br>
+                      <strong>Phone:</strong><a href="tel:+918277049441">+91 8277049441</a><br>
+                      <strong>Email: </strong><a href="mailto:ganesh.hegde@reva.edu.in">ganesh.hegde@reva.edu.in</a><br>
+                    </li>
+                    <li><b>Biological Science</b><br>
+                      <strong>Prof. Prashantha </strong><br>
+                      <strong>Phone:</strong><a href="tel:+919844158444">+91 9844158444</a><br>
+                      <strong>Email: </strong><a href="mailto:prashantha.cn@reva.edu.in">prashantha.cn@reva.edu.in</a><br>
+                    </li>
+                    <li><b>Chemical Sciences</b><br>
+                      <strong>Dr. Shivanna. M </strong><br>
+                      <strong>Phone:</strong><a href="tel:+91 9964556195">+91 9964556195</a><br>
+                      <strong>Email: </strong><a href="mailto:shivanna.m@reva.edu.in">shivanna.m@reva.edu.in</a><br>
+                    </li>
+                    </ul>
                   </address>
                   <ul class="social-icons margin-bottom-40">
                     <li><a href="javascript:;" data-original-title="facebook" class="facebook"></a></li>
