corrections (phone number above header and punctuation)

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                 <!-- BEGIN TOP BAR LEFT PART -->
                 <div class="col-md-6 col-sm-6 additional-shop-info">
                     <ul class="list-unstyled list-inline">
-                        <li><i class="fa fa-phone"></i><span>+91-9844158444</span></li>
+                        <li><i class="fa fa-phone"></i><span>+91-8277049441</span></li>
                         <li><i class="fa fa-envelope-o"></i><span>conference.soas@reva.edu.in</span></li>
                     </ul>
                 </div>
@@ -138,7 +138,7 @@
                   <p><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15542.916468565169!2d77.6352927!3d13.1163393!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdee225fe28f600f6!2sREVA%20University!5e0!3m2!1sen!2sin!4v1664135783203!5m2!1sen!2sin" width="800" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
                 </div>
                 <div class="col-md-3">
-                  <h4>For further details, please contact</h4>
+                  <h4>For further details, please contact:</h4>
                   <address>
                     <ul>
                     <li><b>Physical Sciences</b><br>
