superscrpit added to 4th

--- a/aboutus.html
+++ b/aboutus.html
@@ -143,7 +143,7 @@
                   <p align="justify">The School of Applied Sciences at REVA University is staffed by experienced faculty, equipped with state-of-the-art facilities like digital classrooms and laboratories. The academic atmosphere is serene, and the school collaborates with industries and research organizations to provide necessary skills. The goal is to develop a critical thinking community for innovative problem-solving. The school has published numerous peer-reviewed articles and received grants from funding agencies like DST, DBT, VGST, and ICMR.</p>                  
                 </div>
 				<div class="col-md-6">
-				<h3 class="no-top-space">About the 4th International Conference</h3>
+				<h3 class="no-top-space">About the 4<sup>th</sup> International Conference</h3>
                   <p align="justify">The School of Applied Sciences at REVA University is hosting the "Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)" on October 24th and 25th, 2024. The conference aims to deliver outstanding outcomes and challenges in the Physical, Chemical, Biological, Medical, and Health Science sectors. It will bring together researchers, scientists, technicians, and scholars from all fields to discuss original research conclusions, new approaches, and developmental practices. The conference theme is "Global trends in Sustainable Technology its Applications in Applied Sciences (ICGTSTAS-2024)," aiming to provide an interdisciplinary platform for discussing recent innovations, trends, and practical challenges in Life Science, Chemical & Physical sciences, and Medial Sciences. </p>
 </p>     
 </div>             
