--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
                     <div class="container">
                         <div class="carousel-position-six"> 
 						 <h2 class="animate-delay carousel-title-v6" align="center" data-animation="animated fadeInDown">
-                               Oct 24-25, 2024 <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NXNhN3V1bTRwZnVmMG04c3QxMWU5Z3BlNTggcHJhc2hhbnRoYWNuQG0&amp;tmsrc=prashanthacn%40gmail.com"><i class="fa fa-calendar" style="font-size:20px;color:white"></i></a> &nbsp;&nbsp;9:00AM | Bangalore, Karnataka, India<p><script src="https://cdn.logwork.com/widget/countdown.js"></script>
+                               Oct 24<sup>th</sup>-25<sup>th</sup>, 2024 <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NXNhN3V1bTRwZnVmMG04c3QxMWU5Z3BlNTggcHJhc2hhbnRoYWNuQG0&amp;tmsrc=prashanthacn%40gmail.com"><i class="fa fa-calendar" style="font-size:20px;color:white"></i></a> &nbsp;&nbsp;9:00AM | Bangalore, Karnataka, India<p><script src="https://cdn.logwork.com/widget/countdown.js"></script>
                               <a href="https://logwork.com/countdown-wi33" class="countdown-timer" data-style="columns" data-width="400" data-timezone="Asia/Kolkata" data-textcolor="#ffffff" data-date="2024-10-24 00:00" data-background="#00" data-digitscolor="#121212" data-unitscolor="#fafafa">Event in</a></p>
              </h2>
                             <p class="carousel-subtitle-v7 margin-bottom-30" align="center" data-animation="animated fadeInDown">
                                 4<sup>th</sup> International Conference on
                             </p>   
 							<p class="carousel-subtitle-v6" data-animation="animated fadeInDown">
-                                "Global Trends in Sustainable Technology and its Applications in Applied Sciences"
+                                "Global Trends in Sustainable Technology and its Applications in Applied Sciences"<br>(ICGTSTAS-2024)
                             </p>
 							<hr>
 							<p class="carousel-subtitle-v4 margin-bottom-30" align="center" data-animation="animated fadeInDown">
