chnaged back to bold instead of h5 tag

--- a/contact.html
+++ b/contact.html
@@ -141,17 +141,17 @@
                   <h4>For further details, please contact:</h4>
                   <address>
                     <ul>
-                    <li><h5>Physical Sciences</h5><br>
+                    <li><b>Physical Sciences</b><br>
                       <strong>Dr. Ganesh Shridhar Hegde</strong><br>
                       <strong>Phone:</strong><a href="tel:+918277049441">+91 8277049441</a><br>
                       <strong>Email: </strong><a href="mailto:ganesh.hegde@reva.edu.in">ganesh.hegde@reva.edu.in</a><br>
                     </li>
-                    <li><h5>Biological Science</h5><br>
+                    <li><b>Biological Science</b><br>
                       <strong>Prof. Prashantha. C. N</strong><br>
                       <strong>Phone:</strong><a href="tel:+919844158444">+91 9844158444</a><br>
                       <strong>Email: </strong><a href="mailto:prashantha.cn@reva.edu.in">prashantha.cn@reva.edu.in</a><br>
                     </li>
-                    <li><h5>Chemical Sciences</h5><br>
+                    <li><b>Chemical Sciences</b><br>
                       <strong>Dr. Shivanna. M </strong><br>
                       <strong>Phone:</strong><a href="tel:+91 9964556195">+91 9964556195</a><br>
                       <strong>Email: </strong><a href="mailto:shivanna.m@reva.edu.in">shivanna.m@reva.edu.in</a><br>
