--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="col-md-4 col-sm-4">
             <div class="service-box-heading">
               <em><i class="fa fa-download red"></i></em>
-              <a class="carousel-btn-green" href="#" data-animation="animated fadeInUp"><span>Conference Brochure</span></a>
+              <a class="carousel-btn-green" href="brochure.pdf" data-animation="animated fadeInUp"><span>Conference Brochure</span></a>
             </div>            
           </div>
           <div class="col-md-4 col-sm-4">
