changed physical science to Physics

--- a/Committee.html
+++ b/Committee.html
@@ -196,7 +196,7 @@
                                  <div class="panel-body">                                    
                                     <ul>									 
                                         <li><b>Prof. Shilpa B. R</b>, Director (I/C), SoAS, REVA University</li> 
-										<li><b>Dr. Madhusudana Reddy M B</b>, Head - Department of Chemical Sciences, SoAS, REVA University</li>
+										<li><b>Dr. Madhusudana Reddy M B</b>, Head - Department of Chemistry, SoAS, REVA University</li>
                                     </ul>
                                 </div>
                             </div>
@@ -212,7 +212,7 @@
                             <div style="height: 0px;" id="accordion1_5" class="panel-collapse collapse">
                                  <div class="panel-body">                                    
                                     <ul>									 
-                                        <li><b>Dr. D.V Sunitha</b>, Head - Department of Physical Sciences, SoAS, REVA University<br>
+                                        <li><b>Dr. D.V Sunitha</b>, Head - Department of Physics, SoAS, REVA University<br>
 										<b>Mobile:</b> +91-7760884884<br>
                                         <b>Email:</b> <a href="mailto: sunitha.dv@reva.edu.in">sunitha.dv@reva.edu.in</a></li>
                                     </ul>
@@ -231,15 +231,15 @@
                                  <div class="panel-body">                                    
                                     <ul>
 									<div class="col-md-10">                                          
-										<li><b>Dr. Madesh Kumar</b>, Professor, Department of Physical Sciences</li>
-										<li><b>Dr. Dr. Rajavaram Ramaraghavulu</b>, Assistant Professor, Department of Physical Sciences</li>
-										<li><b>Dr. Ganesh Shridhar Hegde</b>, Assistant Professor, Department of Physical Sciences</li> 										
-										<li><b>Dr. Nagaraju D.H</b>, Professor, Department of Chemical Sciences</li>
-										<li><b>Dr. Srinivas M</b>, Assistant Professor, Department of Chemical Sciences</li>
-										<li><b>Dr. Shivanna M</b>, Associate Professor, Department of Chemical Sciences</li>
-										<li><b>Dr.Senthilkumar R</b>, Associate Professor, Department of Biological Science</li>
-                                        <li><b>Mr. Prashantha CN</b>, Assistant Professor, Department of Biological Science</li>
-                                        <li><b>Dr.Damodhara Reddy</b>, Associate Professor, Department of Biological Science</li>
+										<li><b>Dr. Madesh Kumar</b>, Professor, Department of Physics</li>
+										<li><b>Dr. Dr. Rajavaram Ramaraghavulu</b>, Assistant Professor, Department of Physics</li>
+										<li><b>Dr. Ganesh Shridhar Hegde</b>, Assistant Professor, Department of Physics</li> 										
+										<li><b>Dr. Nagaraju D.H</b>, Professor, Department of Chemistry</li>
+										<li><b>Dr. Srinivas M</b>, Assistant Professor, Department of Chemistry</li>
+										<li><b>Dr. Shivanna M</b>, Associate Professor, Department of Chemistry</li>
+										<li><b>Dr.Senthilkumar R</b>, Associate Professor, Department of BioTec</li>
+                                        <li><b>Mr. Prashantha CN</b>, Assistant Professor, Department of BioTec</li>
+                                        <li><b>Dr.Damodhara Reddy</b>, Associate Professor, Department of BioTec </li>
 									</div> 
                                   </ul>
                                </div>
