changed biotec to biotech

--- a/Committee.html
+++ b/Committee.html
@@ -237,9 +237,9 @@
 										<li><b>Dr. Nagaraju D.H</b>, Professor, Department of Chemistry</li>
 										<li><b>Dr. Srinivas M</b>, Assistant Professor, Department of Chemistry</li>
 										<li><b>Dr. Shivanna M</b>, Associate Professor, Department of Chemistry</li>
-										<li><b>Dr.Senthilkumar R</b>, Associate Professor, Department of BioTec</li>
-                                        <li><b>Mr. Prashantha CN</b>, Assistant Professor, Department of BioTec</li>
-                                        <li><b>Dr.Damodhara Reddy</b>, Associate Professor, Department of BioTec </li>
+										<li><b>Dr.Senthilkumar R</b>, Associate Professor, Department of BioTech</li>
+                                        <li><b>Mr. Prashantha CN</b>, Assistant Professor, Department of BioTech</li>
+                                        <li><b>Dr.Damodhara Reddy</b>, Associate Professor, Department of BioTech</li>
 									</div> 
                                   </ul>
                                </div>
