added Dr to names

--- a/speakers.html
+++ b/speakers.html
@@ -139,11 +139,11 @@
             <div class="owl-carousel owl-carousel4">
 			<div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/Harish Barshilia.jpeg" height="250" width="80" alt="Harish Barshilia">
+                  <img src="assets/pages/img/Logo/Harish Barshilia.jpeg" height="250" width="80" alt="Dr.Harish Barshilia">
 				  <a href="https://www.nal.res.in/en/dr-harish-c-barshilia-fnae-fnasc " target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Harish Barshilia.jpeg" class="fancybox-button" title="Harish Barshilia" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                  <a href="assets/pages/img/Logo/Harish Barshilia.jpeg" class="fancybox-button" title="Dr.Harish Barshilia" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Harish Barshilia</strong>
+                  <strong>Dr.Harish Barshilia</strong>
                   <b>Chief Scientist and Head</b><br>
 				          <b>Surface Engineering Division</b><br>
 				          <b>CSIR - National Aerospace,</b><br>
@@ -153,12 +153,12 @@
               </div>
               <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/P D Babu.jpeg" height="250" width="80" alt="P D Babu">
+                  <img src="assets/pages/img/Logo/P D Babu.jpeg" height="250" width="80" alt="Dr.P D Babu">
                   <a href="https://www.csr.res.in/Faculty/profile/884/888/Dr.P%20DBabu" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/P D Babu.jpeg" class="fancybox-button" title="P D Babu" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
+                  <a href="assets/pages/img/Logo/P D Babu.jpeg" class="fancybox-button" title="Dr.P D Babu" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
                 </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>P D Babu</strong>
+                  <strong>Dr.P D Babu</strong>
 				          <b>Scientist </b><br>
                   <b>UGC-DAE </b><br>
 				          <b>CSR, Mumbai Centre, Maharastra</b>
@@ -184,11 +184,11 @@
             <div class="owl-carousel owl-carousel4">
 			<div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/E. Bhoje Gowd.jpeg" height="250" width="80" alt="E. Bhoje Gowd">
+                  <img src="assets/pages/img/Logo/E. Bhoje Gowd.jpeg" height="250" width="80" alt="Dr.E. Bhoje Gowd">
 				          <a href="https://www.niist.res.in/dr-e-bhoje-gowd" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/E. Bhoje Gowd.jpeg" class="fancybox-button" title="E. Bhoje Gowd" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
+                  <a href="assets/pages/img/Logo/E. Bhoje Gowd.jpeg" class="fancybox-button" title="Dr.E. Bhoje Gowd" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                
 				  </em><a class="recent-work-description" href="javascript:;">
-                  <strong>E. Bhoje Gowd</strong>
+                  <strong>Dr.E. Bhoje Gowd</strong>
                   <b>FSenior Principal Scientist and Professor (AcSIR)</b><br>
 				          <b>CSIR-NIIST, Trivandrum</b><br>
                   <b>IndiaProf. Dr. DVR. Saigopal</b><br>
@@ -197,11 +197,11 @@
               </div>
 			  <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" height="250" width="80" alt="Subba Rao Gangi Setty">
+                  <img src="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" height="250" width="80" alt="Dr.Subba Rao Gangi Setty">
 				        <a href="https://mcb.iisc.ac.in/research-single/subba-rao-gangi-setty" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" class="fancybox-button" title="Subba Rao Gangi Setty" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                  <a href="assets/pages/img/Logo/Subba Rao Gangi Setty.jpeg" class="fancybox-button" title="Dr.Subba Rao Gangi Setty" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Subba Rao Gangi Setty</strong>
+                  <strong>Dr.Subba Rao Gangi Setty</strong>
                   <b>Professor</b><br>
 				          <b>Dep. of Microbiology & Cell Biology</b><br>
 				          <b>Indian Institute of Science</b><br>
@@ -210,11 +210,11 @@
               </div>
 			  <div class="recent-work-item">
                 <em>
-                  <img src="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" height="250" width="80" alt="Prof. Dr. DVR Saigopal">
+                  <img src="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" height="250" width="80" alt="Dr. DVR Saigopal">
 				  <a href="https://clusteruniversity.org/voice_chacellor_mess.html" target="_blank"><i class="fa fa-link"></i></a>
-                  <a href="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" class="fancybox-button" title="Prof. Dr. DVR Saigopal" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                  <a href="assets/pages/img/Logo/Prof. Dr. DVR Saigopal.jpeg" class="fancybox-button" title="Dr. DVR Saigopal" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
                 <a class="recent-work-description" href="javascript:;">
-                  <strong>Prof. Dr. DVR Saigopal</strong>
+                  <strong>Dr. DVR Saigopal</strong>
                   <b>Founder Vice Chancellor</b><br>
 				          <b>Cluster University</b><br>
 				          <b>Kurnool, Andhra Pradesh</b>     			
