--- a/theme.html
+++ b/theme.html
@@ -136,7 +136,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_1">
-                                      Physical Sciences
+                                      Physics
                                     </a>
                                 </h4>
                             </div>
@@ -162,7 +162,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_3">
-                                      Biological Science
+                                      BioTech
                                     </a>
                                 </h4>
                             </div>
@@ -202,7 +202,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_5">
-                                      Chemical Sciences
+                                      Chemistry
                                     </a>
                                 </h4>
                             </div>
