Added awaited speakers

--- a/speakers.html
+++ b/speakers.html
@@ -129,10 +129,41 @@
         <div class="row margin-bottom-40">
           <!-- BEGIN CONTENT -->
           <div class="col-md-12 col-sm-12">
-            <h1>Our Speakers</h1>
-            <div class="content-page">             
-             
-
+            <div class="content-page"> 
+              <h1>Awaited Speakers</h1>            
+              <!-- BEGIN Awaited Speakers -->
+              <div class="row recent-work margin-bottom-40">          
+                <div class="col-md-12">
+                  <div class="owl-carousel owl-carousel4">
+            <div class="recent-work-item">
+                      <em>
+                        <img src="assets/pages/img/Logo/Empty_pic.jpg" height="250" width="80" alt="Awaited Speakers">
+                <a href="#" target="_blank"><i class="fa fa-link"></i></a>
+                        <a href="assets/pages/img/Logo/Empty_pic.jpg" class="fancybox-button" title="Awaited Speakers" data-rel="fancybox-button"><i class="fa fa-search"></i></a>                </em>
+                      <a class="recent-work-description" href="javascript:;">
+                        <strong>----------</strong>
+                        <b>----------</b><br>
+                        <b>----------</b><br>
+                        <b>----------</b><br>
+                      </a>
+                    </div>
+                    <div class="recent-work-item">
+                      <em>
+                        <img src="assets/pages/img/Logo/Empty_pic.jpg" height="250" width="80" alt="Awaited Speakers">
+                        <a href="#" target="_blank"><i class="fa fa-link"></i></a>
+                        <a href="assets/pages/img/Logo/Empty_pic.jpg" class="fancybox-button" title="Awaited Speakers" data-rel="fancybox-button"><i class="fa fa-search"></i></a>
+                      </em>
+                      <a class="recent-work-description" href="javascript:;">
+                        <strong>----------</strong>
+                        <b>----------</b><br>
+                        <b>----------</b><br>
+                        <b>----------</b>
+                      </a>
+                    </div>
+                  </div>
+                  </div>
+                  </div>
+              <h1>Our Speakers</h1>            
         <!-- BEGIN RECENT WORKS -->
         <div class="row recent-work margin-bottom-40">          
           <div class="col-md-12">
