chnaged call for poster and oral presentation and changed names of dept on the acoomodation section

--- a/Papers.html
+++ b/Papers.html
@@ -172,9 +172,9 @@
                                <div class="panel-collapse collapse" id="accordion1_2">
                                   <div class="panel-body">
                                      <p>Any poster presentation that is broadly within the scope of the conference thematic areas. Poster sessions are an informal format for presenting research data or highlighting innovative practices. In the research category, you are encouraged to present any current research.  Research is a broad category and can include many types of methodologies, such as experimental research, applied research, program evaluations, or literature reviews addressing research questions. In the practice category, you are encouraged to highlight any innovative practice or intervention.  You can share preliminary results or final outcomes for the practice.</p>
-									 <p>Those interested in presenting must submit a (a) 8-10 word title, (b) a 25-50 word abstract of their presentation, (c) a one to two page summary of the presentation, and (d) 2-5 keywords describing your poster.  You will also include the category of poster, primary presenter’s name, address, phone number, e-mail, place of employment, and name of additional presenters, all suitable for printing in the conference program.</p>
+									 <p>Those interested in presenting must prepare a (a) 8-10 word title, (b) a 25-50 word abstract of their presentation, (c) a one to two page summary of the presentation, and (d) 2-5 keywords describing your poster.  You will also include the category of poster, primary presenter’s name, address, phone number, e-mail, place of employment, and name of additional presenters, all suitable for printing in the conference program.</p>
 									 <p><b>Poster Size:</b> 90cm Width X 120cm Height</p>
-									 <p><b>Poster submission deadline:</b> 1<sup>th</sup> October 2024.<br><b>Confirmation of Selected Posters:</b> 10<sup>th</sup> October, 2024.<br><b>Email your poster content to:</b> <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a></p>
+                            <p><b>Note:</b>For those wishing to present their posters at the upcoming event, please ensure you bring a printed copy of your poster with you. We will not be providing printouts on-site.</p>
                                   </div>
                                </div>
                             </div>
@@ -192,15 +192,14 @@
 									 <h4>Presentation preparation checklist</h4>
 									 <ul>
 									 <li>Each speaker will be given 15 minutes for oral presentation using Microsoft Power Point (including Q & A session).</li>
-									 <li>Submit the final copy of the presentation by the deadline given to you by the organizers</li>
+									 <li>Submit the final copy of the presentation to the organizers on the day of presentation</li>
 									 <li>Be on-site and available at least 30 minutes before your presentation</li>
 									 <li>Have a copy of your presentation on a USB device</li>
 									 <li>Ensure your presentation is compatible with a Windows operating system. Should your presentation require any specific technical set-up (e.g.different operating system), contact the organizers with your needs and make sure you get a confirmation that the needs can be accommodated</li>
 									 <li>Label the presentation on your device with your name, presentation day, and time.</li>
 									 <li>Please note that technical issues may arise on-site before, during, or after your presentation. While the organizing committee goes above and beyond to make sure this doesn’t happen, in the event that it does, the organizing committee can not be held responsible.</li>
 									</ul>
-									 <p>Those interested in oral presentation must submit a (a) 8-10 word title, (b) a 25-50 word abstract of their presentation, (c) a one page summary of the presentation, and (d) 2-5 keywords describing your presentation.</p>
-									 <p><b>Oral presentation submission deadline:</b>1<sup>th</sup> October 2024.<br><b>Confirmation of Selected presentations:</b> 10<sup>th</sup> October, 2024.<br><b>Email your poster content to:</b> <a href="mailto:conference.soas@reva.edu.in" target="_blank">conference.soas@reva.edu.in</a></p>
+									 <p>Those interested in oral presentation must prepare a (a) 8-10 word title, (b) a 25-50 word abstract of their presentation, (c) a one page summary of the presentation, and (d) 2-5 keywords describing your presentation.</p>
                                   </div>
                                </div>
                             </div> 	 							                                                                             
@@ -274,9 +273,9 @@
 
                                        <b>For accommodation contact:</b><br>
                                        <ul>
-                                          <li><b>Physical Sciences <br>Dr. Rajavaram Ramaraghavulu</b><br>+91-9704919432<br><a href="mailto:rajavaram.ramraghavulu@reva.edu.in" target="_blank">rajavaram.ramraghavulu@reva.edu.in</a></li>
-                                          <li><b>Chemical Sciences<br>Dr. Srinivas M</b><br>+91-9900447889<br><a href="mailto:srinivas.m@reva.edu.in" target="_blank">srinivas.m@reva.edu.in</a></li>
-                                          <li><b>Biological Science<br>Dr.Vivek Keshri</b><br>Assistant Professor<br>+91-9755806309<br><a href="mailto:vivek_keshri@reva.edu.in" target="_blank">vivek_keshri@reva.edu.in</a><br></li>
+                                          <li><b>Depart of Physical<br>Dr. Rajavaram Ramaraghavulu</b><br>+91-9704919432<br><a href="mailto:rajavaram.ramraghavulu@reva.edu.in" target="_blank">rajavaram.ramraghavulu@reva.edu.in</a></li>
+                                          <li><b>Depart of Chemical<br>Dr. Srinivas M</b><br>+91-9900447889<br><a href="mailto:srinivas.m@reva.edu.in" target="_blank">srinivas.m@reva.edu.in</a></li>
+                                          <li><b>Depart of Biotechnology<br>Dr.Vivek Keshri</b><br>Assistant Professor<br>+91-9755806309<br><a href="mailto:vivek_keshri@reva.edu.in" target="_blank">vivek_keshri@reva.edu.in</a><br></li>
                                        </ul>
                                       <b>Note:</b> The organizing committee is not responsible for any financial transactions with the participants. The payment towards your accommodation and travel should be borne by the participants. All expenses re pertaining to the accompanying person should also be borne by the participant.
                                      </p>  
