--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- BEGIN HEADER -->
     <div class="header">
       <div class="container">
-        <a class="site-logo" href="index.html"><img src="assets/pages/img/Logo/Reva_logo.jpeg" alt="REVA University" width="200" height="60"></a>
+        <a class="site-logo" href="index.html"><img src="assets/pages/img/Logo/Reva_logo.jpeg" alt="REVA University" width="198" height="60"></a>
 
         <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
 
@@ -95,6 +95,7 @@
             <li class="dropdown"><a href="Committee.html">Committee</a></li>
 			      <li class="dropdown"><a href="Papers.html">Call for papers</a></li>   
           	<li class="dropdown"><a href="registration.html">Registration</a></li>
+            <li class="dropdown"><a href="sponsors.html">Our Sponsors</a></li>
 
             <!-- BEGIN TOP SEARCH -->
             <li class="menu-search">
