--- a/speakers.html
+++ b/speakers.html
@@ -203,7 +203,7 @@
                 </em>
                 <a class="recent-work-description" href="javascript:;">
                   <strong>Dr. Tharamani</strong>
-                  <b>Professor &amp; Head</b><br> <b>HIIT -Ropar</b><br>
+                  <b>Professor &amp; Head</b><br> <b>IIT -Ropar</b><br>
 				          <b>Panjab</b>
                 </a>
               </div>			  
