changed from physics to physical science

--- a/theme.html
+++ b/theme.html
@@ -137,7 +137,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_1">
-                                      Physics
+                                      Physical Science
                                     </a>
                                 </h4>
                             </div>
@@ -163,7 +163,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_3">
-                                      BioTech
+                                      Biological Science
                                     </a>
                                 </h4>
                             </div>
@@ -203,7 +203,7 @@
                             <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion1" href="#accordion1_5">
-                                      Chemistry
+                                      Chemical Science
                                     </a>
                                 </h4>
                             </div>
