--- a/theme.html
+++ b/theme.html
@@ -243,7 +243,7 @@
     </div>
 
     <!-- BEGIN FOOTER -->
-    <div class="footer">
+     <footer class="footer">
       <div class="container">
         <div class="row">
           <!-- BEGIN COPYRIGHT -->
@@ -255,7 +255,7 @@
          
         </div>
       </div>
-    </div>
+     </footer>
     <!-- END FOOTER -->
 
     <!-- Load javascripts at bottom, this will reduce page load time -->
