--- a/theme.html
+++ b/theme.html
@@ -243,7 +243,7 @@
     </div>
 
     <!-- BEGIN FOOTER -->
-     <footer class="footer">
+     <footer style="position: absolute;bottom: 0;width: 100%;">
       <div class="container">
         <div class="row">
           <!-- BEGIN COPYRIGHT -->
